modified all the files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,5 @@
         "testo",
         "Virgilio"
     ],
-    "livePreview.defaultPreviewPath": "/indix.html"
+    "livePreview.defaultPreviewPath": "/Exo/Traccia_1-11.html"
 }
