--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
         "Città",
+        "Classe",
         "Cognome",
         "comunicazione",
         "D'avorio",
         "Formazione",
         "Formia",
+        "Funzione",
         "grado",
         "GUEA",
         "Indirizzo",
