--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "nascita",
         "personali",
         "Prova",
+        "registrato",
         "Scuola",
         "secondaria",
         "Telefono",
