--- a/ANGULAR-PROJECT/Es1/angular.json
+++ b/ANGULAR-PROJECT/Es1/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Es1": {
+    "es1": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,7 +25,6 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -61,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Es1:build:production"
+              "browserTarget": "es1:build:production"
             },
             "development": {
-              "browserTarget": "Es1:build:development"
+              "browserTarget": "es1:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Es1:build"
+            "browserTarget": "es1:build"
           }
         },
         "test": {
@@ -88,7 +87,6 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -98,6 +96,6 @@
     }
   },
   "cli": {
-    "analytics": "316af787-612d-4613-be51-c73a28860a9e"
+    "analytics": "ec165803-10da-4c11-b7f0-2bd07e99ebbb"
   }
 }
