--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Città",
         "Classe",
         "Cognome",
+        "compteur",
         "comunicazione",
         "D'avorio",
         "Formazione",
