--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "Cognome",
         "compteur",
         "comunicazione",
+        "contactform",
+        "convertire",
+        "convertitore",
         "D'avorio",
         "Formazione",
         "Formia",
@@ -23,6 +26,7 @@
         "registrato",
         "Scuola",
         "secondaria",
+        "Somma",
         "Telefono",
         "testo",
         "Virgilio"
