--- a/project1/angular.json
+++ b/project1/angular.json
@@ -30,7 +30,7 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "serviceWorker": true,
+            "serviceWorker": false,
             "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
